--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Solr Extension for Silex
-========================
+Solr Service Provider for Silex
+===============================
 
 This extension sets up the solr client the connect to a solr instance
 
@@ -16,7 +16,7 @@ git clone git://github.com/andreisavu/solr-php-client-curl.git
 Edit your index.php:
 
 $app['autoloader']->registerNamespace('Nutwerk', __DIR__.'/vendor/nutwerk-solr-extension/lib');
-$app->register(new Nutwerk\Extension\SolrExtension(), array(
+$app->register(new Nutwerk\Provider\SolrServiceProvider(), array(
     'solr.host'       => 'localhost',
     'solr.port'       => 8180,
     'solr.path'       => '/solr/',
